--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
 	</head>
-	<body>
+	<body class="page">
 		<main>
 			<h1>Reasonable.html</h1>
 			<p>Reasonable.html is a single HTML document that contains a reasonably complete set of example HTML elements. It includes most commonly used HTML elements and attempts to use them in common and expected ways.</p>
