--- a/styleguide.html
+++ b/styleguide.html
@@ -114,7 +114,7 @@
                     </div>
 
                     <div class="gap-xl row">
-                        <div class="box justify-start">
+                        <div class="box align-start">
                             <div
                                 class="gap-s justify-start padding-s background-secondary radius-m">
                                 <div class="icon-s icon-color2"></div>
