--- a/getting-started.html
+++ b/getting-started.html
@@ -17,7 +17,7 @@
             <div>
                 <aside class="justify-stretch sticky padding-l">
                     <div class="column box-l radius-xs gap-l align-start">
-                        <img src="rene.svg" />
+                        <svg-icon src="rene.svg"></svg-icon>
                         <div class="column gap-m text-l">
                             <a href="#features">getting started</a
                             ><a href="/about">↪ installation</a
@@ -36,8 +36,8 @@
                     </div>
                 </aside>
             </div>
-            <section class="box align-center column">
-                <div>
+            <section class="box align-center column view">
+                <div class="page">
                     <h1>
                         get started
                         <br class />
@@ -45,7 +45,7 @@
                     </h1>
                     <h4>This is an introduction to Rene's building blocks.</h4>
                 </div>
-                <div>
+                <div class="page">
                     <h2>Installation</h2>
                     <h5>Install with NPM</h5>
                     <div class="row gap-xl">
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="Theming">
+                <div class="page" id="Theming">
                     <h2>Theming</h2>
                     <div class="row gap-xl">
                         <div class="box">
