--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <rnbw-banner></rnbw-banner>
-        <section class="box justify-stretch column">
+        <section class="view align-center">
             <div class="page">
                 <h1>Build design systems for intention and meaning.</h1>
                 <h2>
