--- a/styleguide.html
+++ b/styleguide.html
@@ -37,13 +37,13 @@
                     </div>
                 </aside>
             </div>
-            <section class="box align-center column">
-                <div>
+            <section class="box align-center column view">
+                <div class="page">
                     <h1>styleguide</h1>
                     <h4>This is an introduction to Rene's building blocks.</h4>
                 </div>
 
-                <div id="Typography">
+                <div class="page" id="Typography">
                     <h2>Typography</h2>
                     <div class="row gap-xl">
                         <div class="box">
@@ -297,7 +297,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="gap-xl column" id="Colors">
+                <div class="gap-xl column page" id="Colors">
                     <h2>Colors</h2>
                     <h5>Brand</h5>
                     <hr />
@@ -894,7 +894,7 @@
                     </div>
                     <div class="gap-xl row justify-start"></div>
                 </div>
-                <div class="gap-xl column" id="effects">
+                <div class="gap-xl column page" id="effects">
                     <h2>Shadows</h2>
                     <div class="gap-xl row">
                         <div class="box justify-start gap-m">
@@ -923,7 +923,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="gap-xl column" id="borders">
+                <div class="gap-xl column page" id="borders">
                     <h2>Borders</h2>
                     <div class="gap-xl row">
                         <div class="box justify-start gap-m">
@@ -953,7 +953,7 @@
                     </div>
                 </div>
 
-                <div id="icons">
+                <div id="icons" class="page">
                     <h3>media</h3>
                     <div class="gap-xl">
                         <img
