--- a/getting-started.html
+++ b/getting-started.html
@@ -17,7 +17,7 @@
             <div>
                 <aside class="justify-stretch sticky padding-l">
                     <div class="column box-l radius-xs gap-l align-start">
-                        <svg-icon src="rene.svg"></svg-icon>
+                        <svg-icon src="./rene.svg"></svg-icon>
                         <div class="column gap-m text-l">
                             <a href="#features">getting started</a
                             ><a href="/about">↪ installation</a
