--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <rnbw-banner></rnbw-banner>
         <section class="view align-center">
             <div class="page">
+                <svg-icon src="./rene.svg"></svg-icon>
                 <h1>Build design systems for intention and meaning.</h1>
                 <h2>
                     René is a CSS framework for styling clean, simple and
