--- a/index.html
+++ b/index.html
@@ -1,211 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="./src/index.css" />
-        <script
-            type="module"
-            src="https://unpkg.com/@rainbowapp/svg-icon.js/dist/svg-icon.min.js"></script>
-        <title>Rene</title>
-    </head>
-    <body>
-        <rnbw-banner></rnbw-banner>
-        <section class="view align-center">
-            <div class="page">
-                <svg-icon src="./rene.svg"></svg-icon>
-                <h1>Build design systems for intention and meaning.</h1>
-                <h2>
-                    René is a CSS framework for styling clean, simple and
-                    <u class>
-                        <a class>lightweight</a>
-                    </u>
-                     interfaces. It is the ultimate
-                    <u class>common ground</u
-                    ><span class>
-                        for designers & developers. It is based on both
-                    </span>
-                    <a class>
-                        <u class>native HTML elements</u>
-                    </a>
-                    <span class> and </span><u class>utility classes</u
-                    ><span class>. It is fully </span>
-                    <u class>
-                        <a class>customizable</a>
-                    </u>
-                    <span class> with </span>
-                    <u class>
-                        <a class>tokens</a>
-                    </u>
-                    <span class> and </span>
-                    <u class>
-                        <a class>themes</a>
-                    </u>
-                    <span class>. And easy </span>
-                    <u class>
-                        <a class>syntax</a>
-                    </u>
-                    <span class> to quickly "get it". No weird stuff.</span>
-                    <br class />
-                </h2>
-                <h2>Essentialism</h2>
-                <h3>
-                    Element selectors allow you to target specific HTML elements
-                    on a page and apply styles to them.
-                </h3>
-                <h4>
-                    Utility classes keep your CSS code DRY (Don't Repeat
-                    Yourself) by avoiding the need to write the same styles
-                    repeatedly in different parts of your stylesheet. Utility
-                    classes can make your CSS more modular and reusable.
-                </h4>
-                <h2>Minimalizm</h2>
-                <h5>
-                    Make small, targeted changes to your design's styles, which
-                    can have a big impact on the overall look and feel of your
-                    design. Think of it like using a set of precise, specialized
-                    tools to sculpt a piece of art.
-                </h5>
-                <h2>Relativity</h2>
-                <h6>
-                    Rene's is built with the theory of relativity in mind - The
-                    base size is used as a reference point for other font sizes
-                    on the page. The entire layout system is applied relatively
-                    across everything and everywhere from
-                    <b class>one fundamental base size</b>.
-                </h6>
-                <h4>
-                    Rene.css is a powerful tool that allows you to easily create
-                    and apply consistent sizes to your design's styles. The
-                    syntax for using sizes such as xs, s, m, l, and xl typically
-                    follows the pattern of a class name, followed by a dash,
-                    followed by the size. For example, you might use the class
-                    name "padding-xl" to apply the "xl" size to the "padding"
-                    property. This simple and intuitive syntax is a key part of
-                    what makes Rene.css such a useful tool for building custom
-                    design systems and creating responsive, scalable designs.
-                </h4>
-                <h2>Extensible</h2>
-                <h4>
-                    Using the rene.css framework as a starting point for your
-                    design system can be a valuable tool in creating a cohesive
-                    and consistent look and feel for your project. It can save
-                    you time and effort in the initial setup and allow you to
-                    focus on customizing and extending the framework to meet
-                    your specific needs. By leveraging the pre-existing code and
-                    structure of the framework, you can create a design system
-                    that is both efficient and effective.
-                </h4>
-                <div>
-                    <div class="row">
-                        <a
-                            class="column shadow-hover padding-l box-xs"
-                            href="/typography">
-                            <img
-                                src="https://relate-av4mfw.s3.us-east-2.amazonaws.com/61facdd5d9179742875593cb/Rene%20%28Design%20System%29.svg"
-                                class="box-l" />
-                            <div class="box-l column">
-                                <h5>Get Started</h5>
-                            </div>
-                        </a>
-                        <a
-                            class="column shadow-hover padding-l box-xs"
-                            href="/typography">
-                            <img
-                                class="box-l"
-                                src="https://relate-av4mfw.s3.us-east-2.amazonaws.com/6361409ad917974287591ecd/Rene-typography.svg" />
-                            <div class="box-l column">
-                                <h5>Typography</h5>
-                            </div>
-                        </a>
-                        <a
-                            class="column shadow-hover padding-l box-xs"
-                            href="/layout">
-                            <img
-                                src="https://relate-av4mfw.s3.us-east-2.amazonaws.com/6361409ad917974287591ecd/Rene-layout.svg"
-                                class="box-l" />
-                            <div class="box-l column">
-                                <h5>Layout</h5>
-                            </div>
-                        </a>
-                        <a
-                            class="column shadow-hover padding-l box-xs"
-                            href="/colors">
-                            <img
-                                class="box-l"
-                                src="https://relate-av4mfw.s3.us-east-2.amazonaws.com/6361409ad917974287591ecd/Rene-colors.svg" />
-                            <div class="box-l column">
-                                <h5>Colors</h5>
-                            </div>
-                        </a>
-                        <a
-                            class="column shadow-hover padding-l box-xs"
-                            href="https://relate-icons.relate.design/"
-                            target="_blank">
-                            <img
-                                class="box-l"
-                                src="https://relate-av4mfw.s3.us-east-2.amazonaws.com/6361409ad917974287591ecd/rene-Icons.svg" />
-                            <div class="box-l column">
-                                <h5>Icons ↗</h5>
-                            </div>
-                        </a>
-                        <a
-                            class="column shadow-hover padding-l box-xs"
-                            href="/components">
-                            <img class="box-l" />
-                            <div class="box-l column">
-                                <h5>Forms</h5>
-                            </div>
-                        </a>
-                        <a
-                            class="column shadow-hover padding-l box-xs"
-                            href="/components">
-                            <img class="box-l" />
-                            <div class="box-l column">
-                                <h5>Forms</h5>
-                            </div>
-                        </a>
-                        <a
-                            class="column shadow-hover padding-l box-xs"
-                            href="/components">
-                            <img class="box-l" />
-                            <div class="box-l column">
-                                <h5>Forms</h5>
-                            </div>
-                        </a>
-                        <a
-                            class="column shadow-hover padding-l box-xs"
-                            href="/components">
-                            <img class="box-l" />
-                            <div class="box-l column">
-                                <h5>Forms</h5>
-                            </div>
-                        </a>
-                        <a
-                            class="column shadow-hover padding-l box-xs"
-                            href="/components">
-                            <img class="box-l" />
-                            <div class="box-l column">
-                                <h5>Forms</h5>
-                            </div>
-                        </a>
-                        <a
-                            class="column shadow-hover padding-l box-xs"
-                            href="/components">
-                            <img class="box-l" />
-                            <div class="box-l column">
-                                <h5>Forms</h5>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="column"></div>
-            </div>
-        </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./src/index.css" />
+    <script
+      type="module"
+      src="https://unpkg.com/@rainbowapp/svg-icon.js/dist/svg-icon.min.js"
+    ></script>
+    <title>Rene</title>
+  </head>
+  <body>
+    <rnbw-banner></rnbw-banner>
+    <section class="box justify-stretch column align-center">
+      <div class="page">
+        <div class="column gap-m">
+          <img src="rene.svg" />
+          <h6 class="text-center">rené.css</h6>
+        </div>
 
-        <rnbw-footer></rnbw-footer>
-    </body>
-    <script src="https://rnbw.company/rnbw-banner.js"></script>
-    <script src="https://rnbw.company/rnbw-footer.js"></script>
+        <div class="column gap-xl">
+          <h1 class="text-center">design for intention and meaning</h1>
+          <h3 class="text-center">
+            René is a design system for styling clean, simple, lightweight
+            interfaces. It is the ultimate common ground for designers &
+            developers. It is a CSS framework, based on native HTML elements and
+            reusable classes. It is fully customizable with tokens and themes.
+            And easy syntax to quickly "get it.” No weird stuff.
+          </h3>
+        </div>
+
+        <nav class="box-l gap-xl">
+          <div class="column radius-m border padding-xl box-s gap-l">
+            <div class="box">
+              <svg-icon>icons/arrow-right</svg-icon>
+            </div>
+
+            <h6>getting started</h6>
+          </div>
+
+          <div class="column radius-m border padding-xl box-s gap-l">
+            <div class="box-l row justify-stretch gap-m">
+              <div class="box">
+                <svg-icon>icons/shapes</svg-icon>
+              </div>
+            </div>
+
+            <h6>styleguide</h6>
+          </div>
+          <div class="column radius-m border padding-xl box-xs gap-l">
+            <div class="box">
+              <svg-icon>icons/code-brackets</svg-icon>
+            </div>
+
+            <h6>github ↗</h6>
+          </div>
+        </nav>
+
+        <div class="column gap-xl">
+          <div class="row gap-xl">
+            <div class="box column">
+              <h4>quickly "get it.” no weird stuff.</h4>
+              <p>
+                Ancient Egyptians, Greeks, and Romans wore them. In the 19th
+                century, French workers identified themselves by wearing them.
+                In the 1950s and 1960s, they gained popularity with actors,
+                musicians, and other celebrities.
+              </p>
+            </div>
+            <div class="box column">
+              <h4>achieving harmony in design and development</h4>
+              <p>
+                René is a CSS framework for styling clean, simple, lightweight
+                interfaces. It is the ultimate common ground for designers &
+                developers.
+              </p>
+            </div>
+          </div>
+
+          <div class="row gap-xl">
+            <div class="box column">
+              <h4>minimal design for maximum impact</h4>
+              <p>
+                Make small, targeted changes to your design's styles, which can
+                significantly impact your design's overall look and feel.
+              </p>
+              <ol>
+                <li>
+                  Element selectors target specific elements on a page and apply
+                  styles to them, meaning you’re using the styles simply by
+                  using the elements.
+                </li>
+                <li>
+                  Utility selectors make your CSS more modular and reusable -
+                  they keep your CSS code DRY (Don't Repeat Yourself) by
+                  avoiding the need to write the same styles repeatedly in
+                  different parts of your stylesheet.
+                </li>
+              </ol>
+            </div>
+            <div class="box column">
+              <h4>achieving harmony in design and development</h4>
+              <p>
+                Rene's is built with the theory of relativity in mind - The base
+                size is used as a reference point for anything else - The entire
+                layout system is applied relatively across everything and
+                everywhere.
+              </p>
+              <p>
+                Easily create and apply consistent sizes to your design's
+                styles. This simple and intuitive syntax is a vital part of what
+                makes Rene.css a valuable tool for building custom design
+                systems and creating responsive, scalable designs.
+              </p>
+            </div>
+          </div>
+
+          <div class="row gap-xl">
+            <div class="box column">
+              <h4>flexible customization with an extensible foundation</h4>
+              <p>
+                Using the rene.css framework as a starting point for your design
+                system can be valuable in creating a cohesive and consistent
+                look and feel for your project. It can save you time and effort
+                in the initial setup and allow you to focus on customizing and
+                extending the framework to meet your specific needs. By
+                leveraging the pre-existing code and structure of the framework,
+                you can create an efficient and effective design system.
+              </p>
+            </div>
+            <div class="box column">
+              <h4>flexible customization with an extensible foundation</h4>
+              <p>
+                René distinguishes itself from other modern web frameworks by
+                being designed to be lightweight, which results in faster
+                performance. This also means René consumes fewer resources,
+                which is ideal for slow connections and reducing energy usage on
+                both the client and server sides.
+              </p>
+            </div>
+          </div>
+
+          <div class="row gap-xl">
+            <div class="box column">
+              <h4>future-proofing for timeless compatibility</h4>
+              <p>
+                HTML has been around and is reliable, even with newer
+                technologies emerging. It's expected to continue being
+                functional in the future. it works with literally anything.
+              </p>
+            </div>
+            <div class="box column">
+              <h4>responsive by nature</h4>
+              <p>
+                HTML has been around and is reliable, even with newer
+                technologies emerging. It's expected to continue being
+                functional in the future. it works with literally anything.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <rnbw-footer></rnbw-footer>
+  </body>
+  <script src="https://rnbw.company/rnbw-banner.js"></script>
+  <script src="https://rnbw.company/rnbw-footer.js"></script>
 </html>
