feat: styleguide and home page updated

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <rnbw-banner></rnbw-banner>
     <section class="box justify-stretch column align-center">
       <div class="page">
-        <div class="column gap-m">
-          <img src="rene.svg" />
+        <div class="column gap-m align-center">
+          <svg-icon src="./rene.svg"></svg-icon>
           <h6 class="text-center">rené.css</h6>
         </div>
 
@@ -34,7 +34,7 @@
         <nav class="box-l gap-xl">
           <div class="column radius-m border padding-xl box-s gap-l">
             <div class="box">
-              <svg-icon>icons/arrow-right</svg-icon>
+              <svg-icon src="./icons/arrow-right.svg"></svg-icon>
             </div>
 
             <h6>getting started</h6>
@@ -43,7 +43,7 @@
           <div class="column radius-m border padding-xl box-s gap-l">
             <div class="box-l row justify-stretch gap-m">
               <div class="box">
-                <svg-icon>icons/shapes</svg-icon>
+                <svg-icon src="./icons/shapes.svg"></svg-icon>
               </div>
             </div>
 
@@ -51,7 +51,7 @@
           </div>
           <div class="column radius-m border padding-xl box-xs gap-l">
             <div class="box">
-              <svg-icon>icons/code-brackets</svg-icon>
+              <svg-icon src="./icons/code-brackets.svg"></svg-icon>
             </div>
 
             <h6>github ↗</h6>
