feat: add icon for backgrounds

--- a/styleguide.html
+++ b/styleguide.html
@@ -381,7 +381,10 @@
                 class="gap-s justify-start padding-s radius-m border align-center notification"
                 data-clipboard-text=".color-primary"
               >
-                <div class="icon-s icon-color2"></div>
+                <svg-icon
+                  src="https://raincons.rnbw.dev/icons/opacity.svg"
+                  class="icon-s"
+                ></svg-icon>
                 <span>color-primary</span>
               </div>
             </div>
@@ -395,7 +398,10 @@
                 class="gap-s justify-start padding-s radius-m border align-center notification"
                 data-clipboard-text=".color-secondary"
               >
-                <div class="icon-s icon-color2"></div>
+                <svg-icon
+                  src="https://raincons.rnbw.dev/icons/opacity.svg"
+                  class="icon-s"
+                ></svg-icon>
                 <span>color-secondary</span>
               </div>
             </div>
@@ -411,7 +417,10 @@
                 class="gap-s justify-start padding-s radius-m border align-center notification"
                 data-clipboard-text=".background-primary"
               >
-                <div class="icon-s icon-color2"></div>
+                <svg-icon
+                  src="https://raincons.rnbw.dev/icons/opacity.svg"
+                  class="icon-s"
+                ></svg-icon>
                 <span>background-primary</span>
               </div>
             </div>
@@ -425,7 +434,10 @@
                 class="gap-s justify-start padding-s radius-m border align-center notification"
                 data-clipboard-text=".background-secondary"
               >
-                <div class="icon-s icon-color2"></div>
+                <svg-icon
+                  src="https://raincons.rnbw.dev/icons/opacity.svg"
+                  class="icon-s"
+                ></svg-icon>
                 <span>background-secondary</span>
               </div>
             </div>
@@ -441,7 +453,10 @@
                 class="gap-s justify-start padding-s radius-m border align-center notification"
                 data-clipboard-text=".foreground-primary"
               >
-                <div class="icon-s icon-color2"></div>
+                <svg-icon
+                  src="https://raincons.rnbw.dev/icons/opacity.svg"
+                  class="icon-s"
+                ></svg-icon>
                 <span>foreground-primary</span>
               </div>
             </div>
@@ -455,7 +470,10 @@
                 class="gap-s justify-start padding-s radius-m border align-center notification"
                 data-clipboard-text=".foreground-secondary"
               >
-                <div class="icon-s icon-color2"></div>
+                <svg-icon
+                  src="https://raincons.rnbw.dev/icons/opacity.svg"
+                  class="icon-s"
+                ></svg-icon>
                 <span>foreground-secondary</span>
               </div>
             </div>
@@ -491,7 +509,10 @@
                 class="gap-s justify-start padding-s radius-m border align-center notification"
                 data-clipboard-text=".background-positive"
               >
-                <div class="icon-s icon-color2"></div>
+                <svg-icon
+                  src="https://raincons.rnbw.dev/icons/opacity.svg"
+                  class="icon-s"
+                ></svg-icon>
                 <span>background-positive</span>
               </div>
             </div>
@@ -505,7 +526,10 @@
                 class="gap-s justify-start padding-s radius-m border align-center notification"
                 data-clipboard-text=".background-critical"
               >
-                <div class="icon-s icon-color2"></div>
+                <svg-icon
+                  src="https://raincons.rnbw.dev/icons/opacity.svg"
+                  class="icon-s"
+                ></svg-icon>
                 <span>background-critical</span>
               </div>
             </div>
@@ -519,7 +543,10 @@
                 class="gap-s justify-start padding-s radius-m border align-center notification"
                 data-clipboard-text=".background-negative"
               >
-                <div class="icon-s icon-color2"></div>
+                <svg-icon
+                  src="https://raincons.rnbw.dev/icons/opacity.svg"
+                  class="icon-s"
+                ></svg-icon>
                 <span>background-negative</span>
               </div>
             </div>
